Items class and Recipes class / min command
classes and command in title added

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,8 @@
 name: miner
-version: 1.4.0
+version: 1.4.1
 main: com.ohmona.miner.Main
 author: ohmona
 api-version: 1.13
 commands:
-  rule:
+  min:
+    description: useful things
